--- a/server/config.ini.example
+++ b/server/config.ini.example
@@ -25,8 +25,10 @@ stderr=true
 file=
 
 [clients]
-# (identifier)=1 will indicate that identifier is a valid client
-# e.g. 4efa=1 means a client sending ID 4efa is considered valid
+# (identifier)=(client info) will indicate that identifier is a valid client
+# e.g. 4efa=dogi,icalldogi means a client sending ID 4efa is considered valid
+# and has arbitrary information about the client like name,phone_number
+# put anything in as client info that will help you recognize the client.
 
 [keys]
 # This section contains transient, encrypted key pairs.
