TSL works perfectly with v3 x509 certificates, proper fix for #12

--- a/conf.client.json.example
+++ b/conf.client.json.example
@@ -19,11 +19,10 @@
     // please use either keyfile or key, certfile or cert, cafile or ca.
     "keyfile": "test/x509/certs/CERT1B.rsa",
     "certfile": "test/x509/certs/CERT1B.crt",
-    "cafile": "test/x509/certs/CA1.ca.crt",
+    "cafile": "test/x509/certs/CA1.crt",
 
     // the following options are passed as options to tls as noted here:
-    // http://nodejs.org/api/tls.html#tls_tls_createserver_options_secureconnectionlistener
-    "requestCert": true,
+    // http://nodejs.org/api/tls.html#tls_tls_connect_options_callback
     "rejectUnauthorized": true
 
     // note that these are strings containing PEM data and not file names.
