--- a/test/x509/cert.cfg
+++ b/test/x509/cert.cfg
@@ -1,24 +1,13 @@
 [req]
 encrypt_key=no
 default_bits=2048
-x509_extensions=extensions
 prompt=no
 utf8=yes
 distinguished_name=dn
 
 [dn]
+C=ZZ
+ST=Earth
 L=Internet
-O=User
-CN=localhost
-
-[extensions]
-basicConstraints=critical, CA:FALSE
-keyUsage=critical, digitalSignature, dataEncipherment
-subjectAltName = @hostnames
-
-[hostnames]
-DNS.0 = localhost
-DNS.1 = localhost.
-DNS.2 = localhost.localdomain
-DNS.3 = localhost.local
-IP.0 = 127.0.0.1
+O=Admin
+CN=internet.user
