server now accepts admin access w/o stdin/stdout and accepts multiple clients for progress on #10

--- a/conf.server.json.example
+++ b/conf.server.json.example
@@ -4,6 +4,11 @@
 // http://json.org/
 
 {
+// Where to put admin interface
+"admin": {
+    "port": 11123
+},
+
 // Server socket parameters.
 "server": {
     // Address may be "0.0.0.0" for all interfaces, or the IP address of
